kustomize/parlacards/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlacards
  labels:
    app: parlacards
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlacards
  template:
    metadata:
      labels:
        app: parlacards
    spec:
      containers:
        - name: parlacards
          image: parlacards-medvode
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 1000Mi
              cpu: 200m
            limits:
              memory: 1000Mi
              cpu: 200m
