kustomize/parlacards/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlacards
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kartica.ba.parlameter.si
      secretName: parlacards-tls
  rules:
    - host: kartica.ba.parlameter.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlacards
                port:
                  number: 3000
